 * Added preview='dom_id' to [form]. (Use preview_node to show preview content.) <== TODO: Document
 * Added "in_group" zafu method on visitor. <== TODO: Document
 * Added [upload_field] method to zafu to allow custom upload forms. <== TODO: Document
 * Added support for custom images on nodes with the "img_tag_{mode}" string attribute or the 'img_tag' hash attribute. <== TODO: Document

* Minor changes
 * Support for 'lang_list' when creating vhost file <== TODO: Document
 * Support for Range in zafu. <== TODO: Document
 * Added options to query_parse to ignore unwanted parameters <== TODO: Document
 * Added 'hparams' option to only return Hash parameters from params. <== TODO: Document
 * Fixed query_parse to convert dates to UTC.
 * Fixed form preview inside block.
 * Added unique id to img_tag_{mode} code generated 'UUID'. <== TODO: Document
 * Added PATH_mode.format and [JS] marker to img_tag_{mode}.
 * Fixed form preview with long text (use POST).

== 1.2.2 2012-08-30

* Major changes
 * Basic zjs to batch create/update nodes (with grid.js).
 * Zafu is not a separate gem anymore.
 * Added simple support for JS Tags (used to define grid colums).
 * Enabled rebuilding of templates on partial query.
 * Enabled 'hash' property type.
 * Enabled javascript on toggle.
 * Enabled "fs_skin" brick to use zafu stored in brick file system.
 * No need to use '&gt;' or '&lt;' in html params. \' escape works. Yeah !!
 * Enabled "static" assets with symlink to skins in fs_skin bricks (/static/[brick]-[skin]/xxx.css => bricks/[brick]/skins/[skin]/static/xxx.css)
 * No more strict scoping: "set" variables are rewritten if type matches.
 * Added support for new in rubyless (Post.new, Post.new(:title => 'foo')).
 * Added support for type in custom queries and SQLiss select "nodes select created_at as ti:time"

* Minor changes
 * Fixed label traduction for param.
 * Enable ajax response on Node destroy (use dummy update parameter).